Fixes some secondary nav styling.

--- a/_layouts/nav-secondary.html
+++ b/_layouts/nav-secondary.html
@@ -2,13 +2,17 @@
 <nav class="nav-secondary">
     <div class="expandable">
         <div class="expandable_header">
-            <button class="expandable_target nav-secondary_link nav-secondary_link__current">
-                Item 1
-                <span class="expandable_cue-open">
-                    <span class="btn-icon-right cf-icon cf-icon-down"></span>
+            <button class="expandable_target nav-secondary_link nav-secondary_link__button nav-secondary_link__current">
+                <span class="expandable_header-left">
+                    Item 1
                 </span>
-                <span class="expandable_cue-close">
-                    <span class="btn-icon-right cf-icon cf-icon-up"></span>
+                <span class="expandable_header-right">
+                    <span class="expandable_cue-open">
+                        <span class="cf-icon cf-icon-down nav-secondary_icon"></span>
+                    </span>
+                    <span class="expandable_cue-close">
+                        <span class="cf-icon cf-icon-up nav-secondary_icon"></span>
+                    </span>
                 </span>
             </button>
         </div>
