--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7123,6 +7123,19 @@ img {
   color: #101820;
 }
 
+.nav-secondary_link__button {
+  width: 100%;
+  text-align: left;
+}
+
+.nav-secondary_link__button {
+  display: none;
+}
+
+.nav-secondary_link__button:focus {
+  outline: thin dotted;
+}
+
 .nav-secondary_link:hover,
 .nav-secondary_link:focus,
 .nav-secondary_link__current {
@@ -7168,6 +7181,18 @@ img {
 .nav-secondary_link__current.active {
   border-color: #2cb34a;
   color: #101820;
+}
+
+.nav-secondary_icon {
+  color: #2cb34a;
+}
+
+.nav-secondary .expandable_header {
+  overflow: visible;
+}
+
+.nav-secondary .expandable_content {
+  padding: 0;
 }
 
 /* topdoc
