--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -699,12 +699,18 @@
 }
 
 .content-l_col-1-3 {
+    .u-respond-to-min(600px, {
+        .grid_column(12);
+    });
     .u-respond-to-min(768px, {
         .grid_column(4);
     });
 }
 
 .content-l_col-2-3 {
+    .u-respond-to-min(600px, {
+        .grid_column(12);
+    });
     .u-respond-to-min(768px, {
         .grid_column(8);
     });
