Safe-ify post titles in related/popular lists

--- a/_layouts/popular-stories.html
+++ b/_layouts/popular-stories.html
@@ -11,7 +11,7 @@
         <li class="list_item">
             <a class="list_link"
                href="{{ pop_post.permalink }}">
-                {{ pop_post.title }}
+                {{ pop_post.title|safe }}
             </a>
         </li>
     {% endfor %}
