--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6220,21 +6220,79 @@ img {
   patterns:
     - name: Default example
       markup: |
+        <nav class="nav-secondary">
+            <button class="nav-secondary_link nav-secondary_link__button">
+                Item 1
+            </button>
+            <ul class="nav-secondary_list">
+                <li class="nav-secondary_item">
+                    <a class="nav-secondary_link nav-secondary_link__current" href="#">
+                       Item 1
+                    </a>
+                </li>
+                <li class="nav-secondary_item">
+                    <a class="nav-secondary_link" href="#">
+                       Item 2
+                    </a>
+                </li>
+                <li class="nav-secondary_item">
+                    <a class="nav-secondary_link" href="#">
+                       Item 3
+                    </a>
+                </li>
+            </ul>
+        </nav>
+      codenotes:
+        - |
+          Structural cheat sheet:
+          -----------------------
+          .nav-secondary
+            .nav-secondary_link.nav-secondary_link__button
+            .nav-secondary_list
+              .nav-secondary_item
+                .nav-secondary_link
+    - name: Current link modifier
+      markup: |
+        <a class="nav-secondary_link nav-secondary_link__current" href="#">
+           Current nav link
+        </a>
+      codenotes:
+        - ".nav-secondary_link__current"
+      notes:
+        - "Current links are hidden on small screens and the link button is
+           revealed."
+        - "Currentl links have a left green border on large screens."
+    - name: Link button modifier
+      markup: |
+        <button class="nav-secondary_link nav-secondary_link__button">
+            Button nav link
+        </button>
+      codenotes:
+        - ".nav-secondary_link__button"
+      notes:
+        - "This modifier is only visible on smaller screens."
+        - "The button link modifier is used to convey the current link for small
+           screens. It also acts as a toggle button when mixing this pattern
+           with the expandable pattern."
+        - "The inline style is for demonstration purposes only and is needed
+           because the modifier hides the element at larger screen size.
+           Please do not use it in production."
+    - name: Secondary nav mixed with cf-expandable
+      markup: |
         <nav class="nav-secondary expandable">
             <div class="expandable_header">
                 <button class="expandable_target
                         nav-secondary_link
-                        nav-secondary_link__button
-                        nav-secondary_link__current">
+                        nav-secondary_link__button">
                     <span class="expandable_header-left">
                         Item 1
                     </span>
                     <span class="expandable_header-right">
                         <span class="expandable_cue-open">
-                            <span class="cf-icon cf-icon-down nav-secondary_icon"></span>
+                            <span class="cf-icon cf-icon-down cf-icon__green"></span>
                         </span>
                         <span class="expandable_cue-close">
-                            <span class="cf-icon cf-icon-up nav-secondary_icon"></span>
+                            <span class="cf-icon cf-icon-up cf-icon__green"></span>
                         </span>
                     </span>
                 </button>
@@ -6244,17 +6302,17 @@ img {
                     <li class="nav-secondary_item">
                         <a class="nav-secondary_link nav-secondary_link__current" href="#">
                            Item 1
-                       </a>
+                        </a>
                     </li>
                     <li class="nav-secondary_item">
                         <a class="nav-secondary_link" href="#">
                            Item 2
-                       </a>
+                        </a>
                     </li>
                     <li class="nav-secondary_item">
                         <a class="nav-secondary_link" href="#">
                            Item 3
-                       </a>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -6265,20 +6323,17 @@ img {
           -----------------------
           .nav-secondary.expandable
             .expandable_header
-              .expandable_target.nav-secondary_link.nav-secondary_link__button.nav-secondary_link__current
+              .expandable_target.nav-secondary_link.nav-secondary_link__button
                 .expandable_header-left
                 .expandable_header-right
                   .expandable_cue-open
-                    .cf-icon.cf-icon-down.nav-secondary_icon
+                    .cf-icon.cf-icon-down.cf-icon__green
                   .expandable_cue-close
-                    .cf-icon.cf-icon-up.nav-secondary_icon
+                    .cf-icon.cf-icon-up.cf-icon__green
             .expandable_content
               .nav-secondary_list
                 .nav-secondary_item
                   .nav-secondary_link
-    - name: Current link modifier
-      codenotes:
-        - ".nav-secondary_link__current"
   tags:
     - cfgov-nav-secondary
 */
@@ -6361,91 +6416,71 @@ img {
   }
   .nav-secondary_link:hover,
   .nav-secondary_link.hover {
-    border-color: transparent;
+    border-color: #2cb34a;
     color: #101820;
   }
   .nav-secondary_link:focus,
   .nav-secondary_link.focus {
-    border-color: transparent;
+    border-color: #2cb34a;
     color: #101820;
   }
   .nav-secondary_link:active,
   .nav-secondary_link.active {
-    border-color: transparent;
+    border-color: #2cb34a;
+    color: #101820;
+  }
+}
+@media only all and (max-width: 50em) {
+  .nav-secondary_link__current {
+    display: none;
+  }
+}
+@media only all and (min-width: 50.0625em) {
+  .nav-secondary_link__current {
+    color: #101820;
+    border-color: #2cb34a;
+  }
+  .nav-secondary_link__current:visited,
+  .nav-secondary_link__current.visited {
+    border-color: #2cb34a;
+    color: #101820;
+  }
+  .nav-secondary_link__current:hover,
+  .nav-secondary_link__current.hover {
+    border-color: #2cb34a;
+    color: #101820;
+  }
+  .nav-secondary_link__current:focus,
+  .nav-secondary_link__current.focus {
+    border-color: #2cb34a;
+    color: #101820;
+  }
+  .nav-secondary_link__current:active,
+  .nav-secondary_link__current.active {
+    border-color: #2cb34a;
     color: #101820;
   }
 }
 .nav-secondary_link__button {
   width: 100%;
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
   text-align: left;
+  text-transform: uppercase;
+}
+.lt-ie9 .nav-secondary_link__button {
+  font-weight: normal !important;
+}
+.nav-secondary_link__button:focus {
+  outline: thin dotted;
 }
 @media only all and (min-width: 50.0625em) {
   .nav-secondary_link__button {
     display: none;
   }
 }
-.nav-secondary_link__button:focus {
-  outline: thin dotted;
-}
-@media only all and (max-width: 50em) {
-  .nav-secondary_link__current {
-    font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    text-transform: uppercase;
-  }
-  .lt-ie9 .nav-secondary_link__current {
-    font-weight: normal !important;
-  }
-  .nav-secondary_item .nav-secondary_link__current {
-    display: none;
-  }
-}
-@media only all and (min-width: 50.0625em) {
-  .nav-secondary_link:hover,
-  .nav-secondary_link:focus,
-  .nav-secondary_link__current {
-    color: #101820;
-    border-color: #2cb34a;
-  }
-  .nav-secondary_link:hover:visited,
-  .nav-secondary_link:focus:visited,
-  .nav-secondary_link__current:visited,
-  .nav-secondary_link:hover.visited,
-  .nav-secondary_link:focus.visited,
-  .nav-secondary_link__current.visited {
-    border-color: #2cb34a;
-    color: #101820;
-  }
-  .nav-secondary_link:hover:hover,
-  .nav-secondary_link:focus:hover,
-  .nav-secondary_link__current:hover,
-  .nav-secondary_link:hover.hover,
-  .nav-secondary_link:focus.hover,
-  .nav-secondary_link__current.hover {
-    border-color: #2cb34a;
-    color: #101820;
-  }
-  .nav-secondary_link:hover:focus,
-  .nav-secondary_link:focus:focus,
-  .nav-secondary_link__current:focus,
-  .nav-secondary_link:hover.focus,
-  .nav-secondary_link:focus.focus,
-  .nav-secondary_link__current.focus {
-    border-color: #2cb34a;
-    color: #101820;
-  }
-  .nav-secondary_link:hover:active,
-  .nav-secondary_link:focus:active,
-  .nav-secondary_link__current:active,
-  .nav-secondary_link:hover.active,
-  .nav-secondary_link:focus.active,
-  .nav-secondary_link__current.active {
-    border-color: #2cb34a;
-    color: #101820;
-  }
-}
-.nav-secondary_icon {
+.nav-secondary .cf-icon__green {
   color: #2cb34a;
 }
 .nav-secondary .expandable_header {
