--- a/static/css/nav-secondary.less
+++ b/static/css/nav-secondary.less
@@ -15,12 +15,12 @@
             </button>
             <ul class="nav-secondary_list">
                 <li class="nav-secondary_item">
-                    <a class="nav-secondary_link nav-secondary_link__current" href="#">
+                    <a class="nav-secondary_link" href="#">
                        Item 1
                     </a>
                 </li>
                 <li class="nav-secondary_item">
-                    <a class="nav-secondary_link" href="#">
+                    <a class="nav-secondary_link nav-secondary_link__current" href="#">
                        Item 2
                     </a>
                 </li>
@@ -39,7 +39,7 @@
             .nav-secondary_link.nav-secondary_link__button
             .nav-secondary_list
               .nav-secondary_item
-                .nav-secondary_link
+                .nav-secondary_link / .nav-secondary_link.nav-secondary_link__current
     - name: Current link modifier
       markup: |
         <a class="nav-secondary_link nav-secondary_link__current" href="#">
@@ -74,7 +74,7 @@
                         nav-secondary_link
                         nav-secondary_link__button">
                     <span class="expandable_header-left">
-                        Item 1
+                        Item 2
                     </span>
                     <span class="expandable_header-right">
                         <span class="expandable_cue-open">
@@ -89,12 +89,12 @@
             <div class="expandable_content">
                 <ul class="nav-secondary_list">
                     <li class="nav-secondary_item">
-                        <a class="nav-secondary_link nav-secondary_link__current" href="#">
+                        <a class="nav-secondary_link" href="#">
                            Item 1
                         </a>
                     </li>
                     <li class="nav-secondary_item">
-                        <a class="nav-secondary_link" href="#">
+                        <a class="nav-secondary_link nav-secondary_link__current" href="#">
                            Item 2
                         </a>
                     </li>
@@ -122,7 +122,7 @@
             .expandable_content
               .nav-secondary_list
                 .nav-secondary_item
-                  .nav-secondary_link
+                  .nav-secondary_link / .nav-secondary_link.nav-secondary_link__current
   tags:
     - cfgov-nav-secondary
 */
