--- a/static/css/press-resources.less
+++ b/static/css/press-resources.less
@@ -67,7 +67,7 @@
     .press-contacts .list__links {
         .grid_nested-col-group();
     }
-    .press-contacts .list__links_item {
+    .press-contacts .list__links .list_item {
         .grid_column(6);
     }
 
@@ -82,21 +82,7 @@
 });
 
 .u-respond-to-min(1024px, {
-    // .press-contacts {
-    //     .grid_nested-col-group();
-    // }
-    // .press-contacts_title {
-    //     .grid_column(12)
-    // }
-    // .press-contacts_intro {
-    //     .grid_column(4);
-    // }
-    // .press-contacts_people {
-    //     .grid_column(8);
-    //     margin-top: 0;
-    //     margin-left: 0; // override the negative margin from .grid_nested-col-group
-    // }
-    .press-contacts .list__links_item,
+    .press-contacts .list__links .list_item,
     .press-contacts .contact-person {
         .grid_column(4);
     }
