--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -11399,7 +11399,7 @@ a.focus .summary_header {
   margin-right: -15px;
 }
 
-.press-contacts .list__links_item {
+.press-contacts .list__links .list_item {
   display: inline-block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -11411,11 +11411,11 @@ a.focus .summary_header {
   width: 50%;
 }
 
-.ie .press-contacts .list__links_item {
+.ie .press-contacts .list__links .list_item {
   margin-right: -0.26em;
 }
 
-.lt-ie8 .press-contacts .list__links_item {
+.lt-ie8 .press-contacts .list__links .list_item {
   display: inline;
   margin-right: 0;
   zoom: 1;
